# $Id$

2005-11-17	Sergey N. Lasunov	<sergey@microbecal.com>

* doc/www/: new banners.

2005-11-16	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* 0.2.5 released.

2005-11-14	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/Containers/: major refactoring at UnifiedContainer & Co. to simplify
internal API and separate lazy/full handling logic.

* core/Form/DateRangeList.class.php, core/Form/TimeList.class.php:
time/date-handling primitives; moved from closed-source project.

* core/Base/StaticFactory.class.php: introduced to group all static factories.

2005-11-13	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/Containers/: Storable, Unified and their's company moved to separate
directory.

2005-11-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/Cache/: marking bug fixed in ReferencePool; SharedMemory cache
introduced for memcachedless systems.

2005-11-11	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/Utils/RussianTextUtils.class.php::getAsInOrder(),
core/Logic/LogicalEqLower.class.php, core/Logic/LogicalIn.class.php,
core/OSQL/PreQuery.class.php: dropped, since their removal-release was
upcoming 0.2.5.

2005-11-10	Sveta Smirnova		<sveta@microbecal.com>

* core/DB/MySQL.class.php: added error number as error code in throwing
DatabaseException.

* core/Form/: PCRE and hash filter are not singletones now; PCRE moved from
incubator.

2005-11-07	Sergey S. Sergeev	<webs.support@gmail.com>

* core/OSQL/: combining queries ({union,intersect,except}{,All}) implemented.

2005-11-03	Anton E. Lebedevich	<noiselist@pochta.ru>

* main/DAOs/SmartDAO.class.php: fixed semaphore obscure locking problems. 

2005-11-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* doc/sample/: updated to reflect current situation.

* core/DB/MySQL.class.php: implemented convention-based transparent sequences
handling.

2005-10-31	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/SmartDAO.class.php: checks for semaphore's acquiring problem.
