@@ -1,5 +1,9 @@
 # $Id$
 
+2005-11-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+* core/Cache/: proof-of-concept global SemaphorePool implemented.
+
 2005-11-17	Sergey N. Lasunov	<sergey@microbecal.com>
 
 * doc/www/: new banners.
